codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_first_actions.snap
---
source: tui/src/keymap_setup.rs
expression: snapshot
---
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
tab: All (110 selectable)
tab: Common (21 selectable)
=======
tab: All (146 selectable)
tab: Common (20 selectable)
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
tab: Customized (0) (0 selectable)
tab: Unbound (5) (5 selectable)
tab: App (17 selectable)
tab: Composer (5 selectable)
tab: Editor (17 selectable)
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e
tab: Vim (48 selectable)
tab: Navigation (21 selectable)
=======
tab: Vim (69 selectable)
tab: Navigation (20 selectable)
tab: Agents (10 selectable)
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
tab: Approval (8 selectable)
tab: Debug (1 selectable)
Open Agents | unbound | Global open_agents Open Agents Open the shared agent-session overview. unbound Default
Open Transcript | ctrl-t | Global open_transcript Open Transcript Open the transcript overlay. ctrl-t Default
Open External Editor | ctrl-g | Global open_external_editor Open External Editor Open the current draft in an external editor. ctrl-g Default
Copy | ctrl-o | Global copy Copy Copy the last agent response to the clipboard. ctrl-o Default
Clear Terminal | ctrl-l | Global clear_terminal Clear Terminal Clear the terminal UI. ctrl-l Default
Toggle Vim Mode | unbound | Global toggle_vim_mode Toggle Vim Mode Turn Vim composer mode on or off. unbound Default
Toggle Raw Output | alt-r | Global toggle_raw_output Toggle Raw Output Toggle raw scrollback mode. alt-r Default
Toggle Side Conversation | ctrl-/ | Global toggle_side_conversation Toggle Side Conversation Switch between a side conversation and its parent. ctrl-/ Default
Interrupt Turn | esc | Chat interrupt_turn Interrupt Turn Interrupt the active turn. esc Default
Decrease Reasoning Effort | alt-,, shift-down | Chat decrease_reasoning_effort Decrease Reasoning Effort Decrease reasoning effort. alt-,, shift-down Default
Increase Reasoning Effort | alt-., shift-up | Chat increase_reasoning_effort Increase Reasoning Effort Increase reasoning effort. alt-., shift-up Default
Previous Permission Mode | unbound | Chat previous_permission_mode Previous Permission Mode Switch to the previous available permission mode. unbound Default
Next Permission Mode | unbound | Chat next_permission_mode Next Permission Mode Switch to the next available permission mode. unbound Default
